<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ash">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="175dp">

        <ImageView
            android:id="@+id/ashrooms"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/ashirwad_rooms"
            android:src="@drawable/room_icon" />
        <Button
            android:id="@+id/ashroom"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="125dp"
            android:contentDescription="@string/ashirwad_rooms"
            android:text="@string/rooms" />

        <ImageView
            android:id="@+id/ashdinings"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginStart="190dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/ashirwad_dining"
            android:src="@drawable/dining_icon" />


        <Button
            android:id="@+id/ashdining"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="190dp"
            android:layout_marginTop="125dp"
            android:contentDescription="@string/shreedeep_dining"
            android:text="@string/diining_hall" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        >

        <ImageView
            android:id="@+id/ashfeess"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/ashirwad_fees"
            android:src="@drawable/fees_icon" />

        <ImageView
            android:id="@+id/ashaddresss"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginStart="190dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/ashirwad_address"
            android:src="@drawable/address_icon" />

        <Button
            android:id="@+id/ashfees"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="125dp"
            android:contentDescription="@string/ashirwad_fees"
            android:text="@string/fees" />

        <Button
            android:id="@+id/ashaddress"
            android:layout_width="180dp"
            android:layout_marginEnd="10dp"
            android:layout_height="40dp"
            android:layout_marginStart="190dp"
            android:layout_marginTop="125dp"
            android:contentDescription="@string/ashirwad_address"
            android:text="@string/address" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        >

        <ImageView
            android:id="@+id/ashspecialfacilitiess"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/ashirwad_special_facilities"
            android:src="@drawable/specialfacilities_icon" />

        <ImageView
            android:id="@+id/ashcontacts"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginStart="190dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/ashirwad_contact"
            android:src="@drawable/contact_icon" />

        <Button
            android:id="@+id/ashspecialfacilities"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="125dp"
            android:contentDescription="@string/ashirwad_special_facilities"
            android:text="@string/special_facilities" />
        <Button
            android:id="@+id/ashcontact"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="190dp"
            android:layout_marginTop="125dp"
            android:contentDescription="@string/ashirwad_contact"
            android:text="@string/contact" />
    </RelativeLayout>

</LinearLayout>