<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ohm">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="175dp">

        <ImageView
            android:id="@+id/ohmrooms"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/ohm_rooms"
            android:src="@drawable/room_icon" />
        <Button
            android:id="@+id/ohmroom"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="125dp"
            android:contentDescription="@string/ohm_rooms"
            android:text="@string/rooms" />

        <ImageView
            android:id="@+id/ohmdinings"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginStart="190dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/ohm_dining"
            android:src="@drawable/dining_icon" />


        <Button
            android:id="@+id/ohmdining"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="190dp"
            android:layout_marginTop="125dp"
            android:contentDescription="@string/ohm_dining"
            android:text="@string/diining_hall" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        >

        <ImageView
            android:id="@+id/ohmfeess"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/ohm_fees"
            android:src="@drawable/fees_icon" />

        <ImageView
            android:id="@+id/ohmaddresss"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginStart="190dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/ohm_address"
            android:src="@drawable/address_icon" />

        <Button
            android:id="@+id/ohmfees"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="125dp"
            android:contentDescription="@string/ohm_fees"
            android:text="@string/fees" />

        <Button
            android:id="@+id/ohmaddress"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="190dp"
            android:layout_marginTop="125dp"
            android:contentDescription="@string/ohm_address"
            android:text="@string/address" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        >

        <ImageView
            android:id="@+id/ohmspecialfacilitiess"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/ohm_special_facilities"
            android:src="@drawable/specialfacilities_icon" />

        <ImageView
            android:id="@+id/ohmcontacts"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginStart="190dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/ohm_contact"
            android:src="@drawable/contact_icon" />

        <Button
            android:id="@+id/ohmspecialfacilities"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="125dp"
            android:contentDescription="@string/ohm_special_facilities"
            android:text="@string/special_facilities" />
        <Button
            android:id="@+id/ohmcontact"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="190dp"
            android:layout_marginTop="125dp"
            android:contentDescription="@string/ohm_contact"
            android:text="@string/contact" />
    </RelativeLayout>

</LinearLayout>