<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dar">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="175dp">

        <ImageView
            android:id="@+id/darrooms"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/darshan_rooms"
            android:src="@drawable/room_icon" />
        <Button
            android:id="@+id/darroom"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="125dp"
            android:contentDescription="@string/darshan_rooms"
            android:text="@string/rooms" />

        <ImageView
            android:id="@+id/dardinings"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginStart="190dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/darshan_dining"
            android:src="@drawable/dining_icon" />


        <Button
            android:id="@+id/dardining"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="190dp"
            android:layout_marginTop="125dp"
            android:contentDescription="@string/darshan_dining"
            android:text="@string/diining_hall" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        >

        <ImageView
            android:id="@+id/darfeess"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/darshan_fees"
            android:src="@drawable/fees_icon" />

        <ImageView
            android:id="@+id/daraddresss"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginStart="190dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/darshan_address"
            android:src="@drawable/address_icon" />

        <Button
            android:id="@+id/darfees"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="125dp"
            android:contentDescription="@string/darshan_fees"
            android:text="@string/fees" />

        <Button
            android:id="@+id/daraddress"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginStart="190dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="125dp"
            android:contentDescription="@string/darshan_address"
            android:text="@string/address" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        >

        <ImageView
            android:id="@+id/darspecialfacilitiess"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/darshan_special_facilities"
            android:src="@drawable/specialfacilities_icon" />

        <ImageView
            android:id="@+id/darcontacts"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginStart="190dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/darshan_contact"
            android:src="@drawable/contact_icon" />

        <Button
            android:id="@+id/darspecialfacilities"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="125dp"
            android:contentDescription="@string/darshan_special_facilities"
            android:text="@string/special_facilities" />
        <Button
            android:id="@+id/darcontact"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginStart="190dp"
            android:layout_marginTop="125dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/darshan_contact"
            android:text="@string/contact" />
    </RelativeLayout>

</LinearLayout>