<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".shrdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="175dp">

        <ImageView
            android:id="@+id/shrdprooms"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/shreedeep_rooms"
            android:src="@drawable/room_icon" />
        <Button
            android:id="@+id/shrdproom"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="125dp"
            android:contentDescription="@string/shreedeep_rooms"
            android:text="@string/rooms" />

        <ImageView
            android:id="@+id/shrdpdinings"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginStart="190dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/shreedeep_dining"
            android:src="@drawable/dining_icon" />


        <Button
            android:id="@+id/shrdpdining"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginStart="190dp"
            android:layout_marginTop="125dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/shreedeep_dining"
            android:text="@string/diining_hall" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        >

        <ImageView
            android:id="@+id/shrdpfeess"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/shreedeep_fees"
            android:src="@drawable/fees_icon" />

        <ImageView
            android:id="@+id/shrdpaddresss"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginStart="190dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/shreedeep_address"
            android:src="@drawable/address_icon" />

        <Button
            android:id="@+id/shrdpfees"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="125dp"
            android:contentDescription="@string/shreedeep_fees"
            android:text="@string/fees" />

        <Button
            android:id="@+id/shrdpaddress"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginStart="190dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="125dp"
            android:contentDescription="@string/shreedeep_address"
            android:text="@string/address" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        >

        <ImageView
            android:id="@+id/shrdpspecialfacilitiess"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/shreedeep_special_facilities"
            android:src="@drawable/specialfacilities_icon" />

        <ImageView
            android:id="@+id/shrdpcontacts"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginStart="190dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/shreedeep_contact"
            android:src="@drawable/contact_icon" />

        <Button
            android:id="@+id/shrdpspecialfacilities"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="125dp"
            android:contentDescription="@string/shreedeep_special_facilities"
            android:text="@string/special_facilities" />
        <Button
            android:id="@+id/shrdpcontact"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginStart="190dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="125dp"
            android:contentDescription="@string/shreedeep_contact"
            android:text="@string/contact" />
    </RelativeLayout>
</LinearLayout>